tests/neg/i1649.scala
class Two[@A A] // error

